# rosbag2_sample_plugins

./: README.md  TODO.md  workspace.repos
rosbag2_compression_zlib/: CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_compression_zlib/src/: zlib_compressor.cpp  zlib_utils.cpp  zlib_utils.hpp
rosbag2_compressor_zlib/: CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_compressor_zlib/src/: zlib_compressor.cpp  zlib_utils.c
rosbag2_converter_json/: CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_converter_json/src/: json_converter.cpp
rosbag2_converter_yaml/: CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_converter_yaml/src/: yaml_converter.cpp
rosbag2_sample_plugins/: CMakeLists.txt  package.xml
rosbag2_sample_plugins/config/: sample.rviz
rosbag2_sample_plugins/scripts/: pub_sample_data
rosbag2_storage_simplefile/: CMakeLists.txt  package.xml
rosbag2_storage_simplefile/include/rosbag2_storage_simplefile/: simple_file_storage.hpp  visibility_control.h
rosbag2_storage_simplefile/src/: simple_file_storage.cpp
scripts/: attach  echo  echo.py  pub  pub.py  rebuild-img  src  startimg
